--------------------------------------------------------------------------------
Changes for 2.0.0rc2

New features:
A.F....... [ZBXNEXT-914] redesign Administration->DM (Eduard)

Bug fixes:
..F....... [ZBX-4761] fixed "&" escaping in form inputs (Pavels)
.......PS. [ZBX-4749] fixed proxy crash on exit when deleting trend cache (dimir)
..F....... [ZBX-4778] fixed port field validation in creating discovery rule (Toms)
A......... [ZBX-4621] fixed macro update using host.massupdate (Vedmak)
A.F....... [ZBX-4697] fixed error when massupdate group for hosts that belongs to different groups (Vedmak)
A.F....... [ZBX-4257] fixed creating discovery rules, items and item prototypes (Pavels)
..F....... [ZBX-4765] fixed filter fields being unset when saving of discovery rule fails (Vedmak)
..F....... [ZBX-4736] fixed undefined variable in Inventory Hosts (Toms)
..F....... [ZBX-4764] fixed critical error in Administration->Notifications (Toms)
..F....... [ZBX-4753] properly pluralized "Last n issues" message in dashboard (Vedmak)
..F....... [ZBX-3613] updated notification sounds; fixed sound playback in profile (Toms, Vedmak)
..F....... [ZBX-4713] fixed ACK status for triggers visible in Dashboard and Screens (Toms)
..F....... [ZBX-4752] fixed creating SNMPv1 item prototypes with data type "boolean" (Vedmak)
..F....... [ZBX-4702] fixed dynamic item saving in Screens (Eduard)
A.F....... [ZBX-4257] fixed updating templated items (Pavels)
A.F....... [ZBX-4710] fixed replacing graph Y axis item prototypes when cloning a discovery rule (Pavels)
A.F....... [ZBX-4710] fixed deleting hosts when a graph prototype uses a normal item for it's Y scale (Pavels)
..F....... [ZBX-4365] added plural translation support for the failed login attempt message (Pavels)
..F....... [ZBX-4365] fixed user being redirected to the dashboard after trying to login with an incorrect password (Pavels)

--------------------------------------------------------------------------------
Changes for 2.0.0rc1
